# SaltPass

./: CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  RELEASE.md
.github/workflows/: cargo.yml  ci.yml  release.yml
src/: cli.rs  crypto.rs  main.rs  models.rs  storage.rs
