[package]
name = "SaltPass"
version = "0.1.3"
edition = "2024"
authors = ["YanLien <YJQ980314@outlook.com>"]
description = "A deterministic password generator based on cryptographic algorithms"
license = "MIT"
repository = "https://github.com/YanLien/SaltPass"
homepage = "https://github.com/YanLien/SaltPass"
documentation = "https://github.com/YanLien/SaltPass"
readme = "README.md"
keywords = ["password", "generator", "crypto", "security", "cli"]
categories = ["command-line-utilities", "cryptography"]
exclude = [".github/", "target/"]

[dependencies]
toml = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
dialoguer = "0.11"
arboard = "3.4"
argon2 = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
scrypt = "0.11"
zeroize = { version = "1.8", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
aes-gcm = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console"] }

[profile.release]
opt-level = 3
